--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <html lang="id">
 <head>
     <meta charset="UTF-8">
+    <meta name="google-site-verification" content="7lV8i9ohyNQbfXRpus0oR-a_mdY9hfIBMa8f7Qh-emI" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <script src="https://cdn.tailwindcss.com"></script>
     <style>body { margin: 0; } :root {
