--- a/index.html
+++ b/index.html
@@ -5,6 +5,9 @@
     <meta charset="UTF-8">
     <meta name="google-site-verification" content="7lV8i9ohyNQbfXRpus0oR-a_mdY9hfIBMa8f7Qh-emI" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>SMP Muhammadiyah Loa Kulu | SMPMUHLK - Sekolah Berkemajuan</title>
+<meta name="description" content="Website resmi SMP Muhammadiyah Loa Kulu (SMPMUHLK). Sekolah berkarakter dan inovatif di Loa Kulu. Dapatkan info PPDB dan kegiatan sekolah di sini.">
+<meta name="keywords" content="SMP Muhammadiyah Loa Kulu, SMPMUHLK, Sekolah Loa Kulu, smpmuhlk.vercel.app">
     <script src="https://cdn.tailwindcss.com"></script>
     <style>body { margin: 0; } :root {
     --primary: #006c32; /* Muhammadiyah Green */
