--- a/index.html
+++ b/index.html
@@ -9,6 +9,12 @@
 <meta name="description" content="Website resmi SMP Muhammadiyah Loa Kulu (SMPMUHLK). Sekolah berkarakter dan inovatif di Loa Kulu. Dapatkan info PPDB dan kegiatan sekolah di sini.">
 <meta name="keywords" content="SMP Muhammadiyah Loa Kulu, SMPMUHLK, Sekolah Loa Kulu, smpmuhlk.vercel.app">
     <script src="https://cdn.tailwindcss.com"></script>
+    <link rel="icon" type="image/jpeg" href="https://i.ibb.co.com/F4hFWTgf/images.jpg">
+    
+    <meta property="og:image" content="https://i.ibb.co.com/F4hFWTgf/images.jpg">
+    <meta property="og:title" content="SMP Muhammadiyah Loa Kulu | SMPMUHLK">
+    <meta property="og:description" content="Website resmi SMP Muhammadiyah Loa Kulu. Sekolah Berkemajuan.">
+    <meta property="og:type" content="website">
     <style>body { margin: 0; } :root {
     --primary: #006c32; /* Muhammadiyah Green */
     --primary-dark: #004d24;
