--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>RahmanAi Web Preview</title>
+    <title>SMP MUMUHAMMADIYAH LOA KULU</title>
     <script src="https://cdn.tailwindcss.com"></script>
     <style>
         body { margin: 0; font-family: sans-serif; overflow-x: hidden; }
